# artificial-morphogenesis-evo

./: .gitignore  LICENSE  README.md  pyproject.toml  run_config.py
analysis/figures/: fit_step_convergence.py  similarity_matrix.py
analysis/qualitative/: get_best.py  make_gifs.py  render_best_frames.py
analysis/target_grids/: save_target_grid.py
configs/: config.yaml
inputs/: checker.txt  cross.txt  fine_stripes.txt  h.txt  spine.txt  square.txt  stripes.txt
src/: ca.py  ea.py  pattern.py  utils.py  visualization.py
src/fitness/: boundary_shape.py  distance_morphology.py  pixel_iou.py
